[gd_scene load_steps=23 format=3 uid="uid://dkmdhierrhn6o"]

[ext_resource type="Script" path="res://scripts/demon.gd" id="1_ewpm7"]
[ext_resource type="Texture2D" uid="uid://bjapgmhjv872p" path="res://img/yokai_1/Attack_2.png" id="2_mdm6w"]
[ext_resource type="Texture2D" uid="uid://o7isvoto8xm" path="res://img/shadow.png" id="2_mxk1w"]
[ext_resource type="Texture2D" uid="uid://cqm1r007oarkn" path="res://img/yokai_1/Dead.png" id="3_17881"]
[ext_resource type="Texture2D" uid="uid://dc6wcshvq1hyu" path="res://img/yokai_1/Walk.png" id="4_8hn0g"]
[ext_resource type="PackedScene" uid="uid://bdomljfafrmo4" path="res://scenes/coin.tscn" id="5_s82qb"]

[sub_resource type="AtlasTexture" id="AtlasTexture_67561"]
atlas = ExtResource("2_mdm6w")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_rmdmv"]
atlas = ExtResource("2_mdm6w")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_nnrrt"]
atlas = ExtResource("2_mdm6w")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_cvtot"]
atlas = ExtResource("2_mdm6w")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_vcmi2"]
atlas = ExtResource("3_17881")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_n3ove"]
atlas = ExtResource("3_17881")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_5q18y"]
atlas = ExtResource("3_17881")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ohgd1"]
atlas = ExtResource("3_17881")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_u4ggs"]
atlas = ExtResource("4_8hn0g")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_rrqyc"]
atlas = ExtResource("4_8hn0g")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_d8tyj"]
atlas = ExtResource("4_8hn0g")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_q4wux"]
atlas = ExtResource("4_8hn0g")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_41x0q"]
atlas = ExtResource("4_8hn0g")
region = Rect2(512, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_sk6ut"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_67561")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rmdmv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nnrrt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cvtot")
}],
"loop": false,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vcmi2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n3ove")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5q18y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ohgd1")
}],
"loop": false,
"name": &"die",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u4ggs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rrqyc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d8tyj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q4wux")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_41x0q")
}],
"loop": true,
"name": &"walk",
"speed": 9.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gwuo3"]
size = Vector2(17.5, 48)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uv8o5"]
size = Vector2(23.5, 52)

[node name="Demon" type="PathFollow2D" groups=["demon"]]
progress = 1.0
rotates = false
script = ExtResource("1_ewpm7")

[node name="shadow" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.52549)
position = Vector2(-10, 47)
scale = Vector2(0.0662469, 0.0662469)
texture = ExtResource("2_mxk1w")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(-17, -33)
scale = Vector2(1.35279, 1.35279)
sprite_frames = SubResource("SpriteFrames_sk6ut")
animation = &"die"
autoplay = "walk"
flip_h = true

[node name="hitbox" type="Area2D" parent="." groups=["enemy"]]
scale = Vector2(2, 2)
collision_layer = 9
collision_mask = 9

[node name="hitbox_collision" type="CollisionShape2D" parent="hitbox"]
position = Vector2(-8.25, 0)
shape = SubResource("RectangleShape2D_gwuo3")

[node name="attack" type="Area2D" parent="." groups=["enemy_attack"]]
position = Vector2(-45.25, -10)

[node name="attack_collision" type="CollisionShape2D" parent="attack"]
shape = SubResource("RectangleShape2D_uv8o5")
disabled = true

[node name="hpLabel" type="Label" parent="."]
modulate = Color(1, 1, 1, 0.784314)
texture_filter = 1
offset_left = -27.0
offset_top = -62.0
offset_right = 95.0
offset_bottom = 7.0
scale = Vector2(0.25, 0.25)
theme_override_font_sizes/font_size = 40
text = "50"
horizontal_alignment = 1
vertical_alignment = 1

[node name="coin" parent="." instance=ExtResource("5_s82qb")]
position = Vector2(-8, -40)

[connection signal="sprite_frames_changed" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_sprite_frames_changed"]
[connection signal="area_entered" from="hitbox" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="hitbox" to="." method="_on_area_2d_area_exited"]
[connection signal="area_entered" from="attack" to="." method="_on_attack_area_entered"]
